--- a/components/pd_client/Cargo.toml
+++ b/components/pd_client/Cargo.toml
@@ -19,7 +19,7 @@ failpoints = ["fail/failpoints"]
 
 [dependencies]
 error_code = { path = "../error_code" }
-futures = "0.3"
+futures = { version = "0.3", features = ["compat"] }
 grpcio = { version = "0.6", default-features = false, features = ["openssl-vendored"] }
 hex = "0.4"
 kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
