introduce trace proc macros
Signed-off-by: Jay Lee <BusyJayLee@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -198,6 +198,7 @@ members = [
   "components/test_pd",
   "components/tikv_alloc",
   "components/match_template",
+  "components/memory-trace-macros",
   "components/engine_traits/tests",
   "components/codec",
   "components/configuration",
