--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -19,6 +19,7 @@ prost-codec = [
   "sst_importer/prost-codec",
   "tidb_query_datatype/prost-codec",
   "txn_types/prost-codec",
+  "tikv_util/prost-codec",
 ]
 protobuf-codec = [
   "engine_rocks/protobuf-codec",
@@ -30,6 +31,7 @@ protobuf-codec = [
   "sst_importer/protobuf-codec",
   "tidb_query_datatype/protobuf-codec",
   "txn_types/protobuf-codec",
+  "tikv_util/protobuf-codec",
 ]
 testexport = []
 
@@ -57,6 +59,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = f
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
+memory-trace-macros = { path = "../memory-trace-macros" }
 pd_client = { path = "../pd_client" }
 prometheus = { version = "0.8", features = ["nightly"] }
 prost = { version = "0.6", optional = true }
