add raft client trace
Signed-off-by: Jay Lee <BusyJayLee@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,6 +101,7 @@ lazy_static = "1.3"
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "components/log_wrappers" }
+memory-trace-macros = { path = "components/memory-trace-macros" }
 mime = "0.3.13"
 more-asserts = "0.2"
 murmur3 = "0.5.1"
