--- a/cmd/Cargo.toml
+++ b/cmd/Cargo.toml
@@ -69,6 +69,7 @@ futures = "0.3"
 tokio = { version = "0.2", features = ["rt-threaded"] }
 grpcio = { version = "0.6", default-features = false, features = ["openssl-vendored"] }
 hex = "0.4"
+inferno = "0.10"
 keys = { path = "../components/keys" }
 kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
 libc = "0.2"
