--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,7 @@ openssl = "0.10"
 hyper = "0.13"
 hyper-openssl = "0.8"
 http = "0"
+inferno = "0.10"
 into_other = { path = "components/into_other" }
 keys = { path = "components/keys" }
 kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
