--- a/components/batch-system/Cargo.toml
+++ b/components/batch-system/Cargo.toml
@@ -9,6 +9,7 @@ test-runner = ["derive_more"]
 
 [dependencies]
 crossbeam = "0.7"
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util" }
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
