--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,6 +176,7 @@ raft = { git = "https://github.com/pingcap/raft-rs", branch = "0.6.x", default-f
 raft-proto = { git = "https://github.com/pingcap/raft-rs", branch = "0.6.x", default-features = false }
 protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev = "65e9df20fbcbcf2409d5ee86a2332ecd04c534f8" }
 protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev = "65e9df20fbcbcf2409d5ee86a2332ecd04c534f8" }
+crossbeam-channel = { git = "https://github.com/tikv/crossbeam", branch = "tikv-5.0" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "5125fc1a69496b73b26b3c08b6e8afc3c665a56e" }
