--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,7 @@ failure = "0.1"
 file_system = { path = "components/file_system" }
 fs2 = "0.4"
 futures = { version = "0.3", features = ["thread-pool", "compat"] }
+syn = "=1.0.57"
 futures-executor = "0.3.1"
 futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
 grpcio = { version = "0.8",  default-features = false, features = ["openssl-vendored"] }
@@ -146,7 +147,7 @@ hyper-openssl = "0.8"
 http = "0"
 into_other = { path = "components/into_other", default-features = false }
 keys = { path = "components/keys", default-features = false }
-kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud", default-features = false }
 lazy_static = "1.3"
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
