--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -14,6 +14,7 @@ protobuf-codec = [
   "concurrency_manager/protobuf-codec",
   "engine_test/protobuf-codec",
   "engine_traits/protobuf-codec",
+  "engine_rocks/protobuf-codec",
   "error_code/protobuf-codec",
   "into_other/protobuf-codec",
   "keys/protobuf-codec",
@@ -31,6 +32,7 @@ prost-codec = [
   "concurrency_manager/prost-codec",
   "engine_test/prost-codec",
   "engine_traits/prost-codec",
+  "engine_rocks/prost-codec",
   "error_code/prost-codec",
   "into_other/prost-codec",
   "keys/prost-codec",
@@ -69,7 +71,7 @@ futures = "0.3"
 futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
 into_other = { path = "../into_other",  default-features = false }
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud", default-features = false }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
@@ -99,13 +101,13 @@ tokio = { version = "0.2", features = ["sync", "rt-threaded"] }
 txn_types = { path = "../txn_types", default-features = false }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
+engine_rocks = { path = "../engine_rocks", default-features = false }
 
 # Should be [dev-dependencies] but we need to control the features
 # https://github.com/rust-lang/cargo/issues/6915
 engine_test = { path = "../engine_test", default-features = false }
 
 [dev-dependencies]
-engine_rocks = { path = "../engine_rocks", default-features = false }
 panic_hook = { path = "../panic_hook" }
 test_sst_importer = { path = "../test_sst_importer", default-features = false }
 engine_panic = { path = "../engine_panic", default-features = false }
