--- a/components/resolved_ts/Cargo.toml
+++ b/components/resolved_ts/Cargo.toml
@@ -43,7 +43,7 @@ fail = "0.4"
 futures = "0.3"
 grpcio = { version = "0.8",  default-features = false, features = ["openssl-vendored"] }
 hex = "0.4"
-kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud", default-features = false }
 log_wrappers = { path = "../log_wrappers" }
 pd_client = { path = "../pd_client" }
 prost = "0.7"
