--- a/components/test_backup/Cargo.toml
+++ b/components/test_backup/Cargo.toml
@@ -24,7 +24,7 @@ futures = "0.3"
 futures-executor = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
 grpcio = { version = "0.8",  default-features = false, features = ["openssl-vendored"] }
-kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud", default-features = false }
 rand = "0.7"
 tempfile = "3.0"
 test_raftstore = { path = "../test_raftstore" }
