--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -162,6 +162,7 @@ hibernate-regions = false
 dev-assert = true
 perf-level = 5
 disable-kv-wal = true
+skip-commit-index = true
 
 [coprocessor]
 split-region-on-table = false
