--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -75,6 +75,7 @@ kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
+parking_lot = "0.11"
 pd_client = { path = "../pd_client", default-features = false }
 prometheus = { version = "0.10", features = ["nightly"] }
 prometheus-static-metric = "0.4"
