--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -64,18 +64,18 @@ configuration = { path = "../configuration" }
 tempfile = "3.0"
 serde = "1.0"
 serde_derive = "1.0"
-kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "release-5.1", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud-5.1", default-features = false }
 raft = { version = "0.6.0-alpha", default-features = false }
 protobuf = "2"
 fail = "0.4"
 
 [dependencies.rocksdb]
-git = "https://github.com/tikv/rust-rocksdb.git"
+git = "https://github.com/busyjay/rust-rocksdb.git"
 package = "rocksdb"
-branch = "tikv-5.0"
+branch = "test-cloud-5.1"
 features = ["encryption", "static_libcpp"]
 
 [dev-dependencies]
-kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "release-5.1", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud-5.1", default-features = false }
 rand = "0.7"
 toml = "0.5"
