--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -76,10 +76,11 @@ futures = "0.3"
 futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
 into_other = { path = "../into_other",  default-features = false }
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "release-5.1", default-features = false }
+kvproto = { git = "https://github.com/busyjay/kvproto.git", branch = "test-cloud-5.1", default-features = false }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
+parking_lot = "0.11"
 memory_trace_macros = { path = "../memory_trace_macros" }
 pd_client = { path = "../pd_client", default-features = false }
 prometheus = { version = "0.10", features = ["nightly"] }
