--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -183,7 +183,8 @@ future-poll-size = 2
 hibernate-regions = false
 dev-assert = true
 perf-level = 5
-disable-kv-wal = true
+disable-tablet-wal = true
+skip-commit-index = true
 
 [coprocessor]
 split-region-on-table = false
