--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -207,6 +207,7 @@ max-background-flushes = 4
 max-manifest-file-size = "12MB"
 create-if-missing = false
 max-open-files = 12345
+db-write-buffer-size = 2
 enable-statistics = false
 stats-dump-period = "12m"
 compaction-readahead-size = "1KB"
@@ -261,6 +262,7 @@ bottommost-level-compression = "disable"
 bottommost-zstd-compression-dict-size = 1024
 bottommost-zstd-compression-sample-size = 1024
 write-buffer-size = "1MB"
+memtable-prefix-bloom-size-ratio = 0.2
 max-write-buffer-number = 12
 min-write-buffer-number-to-merge = 12
 max-bytes-for-level-base = "12KB"
@@ -322,6 +324,7 @@ compression-per-level = [
     "lz4",
 ]
 write-buffer-size = "1MB"
+memtable-prefix-bloom-size-ratio = 0.2
 max-write-buffer-number = 12
 min-write-buffer-number-to-merge = 12
 max-bytes-for-level-base = "12KB"
@@ -367,6 +370,7 @@ compression-per-level = [
     "lz4",
 ]
 write-buffer-size = "1MB"
+memtable-prefix-bloom-size-ratio = 0.2
 max-write-buffer-number = 12
 min-write-buffer-number-to-merge = 12
 max-bytes-for-level-base = "12KB"
@@ -412,6 +416,7 @@ compression-per-level = [
     "lz4",
 ]
 write-buffer-size = "1MB"
+memtable-prefix-bloom-size-ratio = 0.2
 max-write-buffer-number = 12
 min-write-buffer-number-to-merge = 12
 max-bytes-for-level-base = "12KB"
@@ -490,6 +495,7 @@ compression-per-level = [
     "lz4",
 ]
 write-buffer-size = "1MB"
+memtable-prefix-bloom-size-ratio = 0.2
 max-write-buffer-number = 12
 min-write-buffer-number-to-merge = 12
 max-bytes-for-level-base = "12KB"
