--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -70,7 +70,7 @@ protobuf = "2"
 fail = "0.4"
 
 [dependencies.rocksdb]
-git = "https://github.com/tikv/rust-rocksdb.git"
+git = "https://github.com/tonyxuqqi/rust-rocksdb.git"
 package = "rocksdb"
 branch = "tikv-5.0"
 features = ["encryption", "static_libcpp"]
