--- a/Cargo.toml
+++ b/Cargo.toml
@@ -254,8 +254,8 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "5125fc1a69496b7
 # When changing TiKV cooperatively with kvproto, this will be useful to submit the PR to TiKV concurrently with
 # the PR to kvproto.
 # After the PR to kvproto is merged, remember to comment this out and change the rev for kvproto dependency.
-# [patch.'https://github.com/pingcap/kvproto']
-# kvproto = {git = "https://github.com/your_github_id/kvproto", branch="your_branch"}
+[patch.'https://github.com/busyjay/kvproto']
+kvproto = {git = "https://github.com/tonyxuqqi/kvproto", rev="39eb64d"}
 
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
