--- a/Cargo.toml
+++ b/Cargo.toml
@@ -371,28 +371,28 @@ txn_types = { path = "components/txn_types" }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 
 [profile.dev.package.grpcio-sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.librocksdb_sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.libtitan_sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.tirocks-sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.tests]
-opt-level = 0
-debug = true
+debug = 1
+opt-level = 1
 
 [profile.dev]
 opt-level = 0
-debug = true
+debug = 0
 codegen-units = 4
 lto = false
 incremental = true
@@ -418,7 +418,7 @@ codegen-units = 4
 
 [profile.test]
 opt-level = 0
-debug = true
+debug = 0
 codegen-units = 16
 lto = false
 incremental = true
