--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -57,6 +57,7 @@ resource_metering = { workspace = true }
 slog = "2.3"
 smallvec = "1.4"
 test_pd_client = { workspace = true }
+thiserror = "1.0"
 tikv_util = { workspace = true }
 time = "0.1"
 tracker = { workspace = true }
