--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -28,6 +28,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { workspace = true }
 raftstore = { workspace = true }
 test_raftstore = { workspace = true }
+test_raftstore-v2 = { workspace = true }
 tikv = { workspace = true }
 tikv_util = { workspace = true }
 tracker = { workspace = true }
